looking better, but strange bugs on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -9,31 +9,12 @@ body{ margin:0px 0px; }
   font-family: 'Roboto';
 }
 
-#hero h2 {
-  font-weight: 100;
-}
-
 #hero hr {
   width: 280px;
-  margin-top: -40px;
+  margin-top: -10px;
   background-color:white;
 }
 
-#hero p {
-  font-family: 'Open Sans';
-  font-weight: 100;
-  font-size: 12pt;
-}
-
-#quote {
-  quotes: "“" "”" "‘" "’";
-}
-#quote:before {
-    content: open-quote;
-}
-#quote:after {
-    content: close-quote;
-}
 
 #hero #quote {
   font-style:italic;
@@ -41,16 +22,68 @@ body{ margin:0px 0px; }
 
 .header{
   position:absolute;
-  top:50%;
+  top:45%;
   text-align:center;
   width:100%;
   color:#fff;
-  font-size:36px;
-  -ms-transform: translate(0,-50%); /* IE 9 */
-   	-webkit-transform: translate(0,-50%); /* Safari */
-    transform: translate(0,-50%);
+  /*font-size:36px;*/
+  -ms-transform: translate(0,-45%); /* IE 9 */
+   	-webkit-transform: translate(0,-45%); /* Safari */
+    transform: translate(0,-45%);
+}
+
+.header h1 {
+  text-align:center;
+  font-family: 'Roboto';
+  font-weight:100;
+  font-size: 60px;
+  margin-top: 0;
+}
+
+
+.header .lead {
+  text-align:center;
+  margin-top: -35px;
+  color:white;
+}
+
+.lead {
+  font-size: 20px;
+  font-family: 'Open Sans';
+  font-weight: 300;
+  color: grey;
+  line-height: 130%;
+  width: 400px;
+  text-align: justify;
+}
+
+.social img {
+  height: 45px;
+  padding-left: 2px;
+  padding-right: 2px;
+  -webkit-filter: grayscale(90%);
+  -moz-filter: grayscale(90%);
+  filter: grayscale(90%);
+  -webkit-transition: all 0.1s linear;
+  -moz-transition: all 0.1s linear;
+  -o-transition: all 0.1s linear;
+  -ms-transition: all 0.1s linear;
 
 }
+
+.social img:hover {
+  -webkit-filter: grayscale(0%);
+  -moz-filter: grayscale(0%);
+  filter: grayscale(0%);
+}
+
+#profpic {
+  border-radius: 50%;
+  padding-bottom: 0;
+  width: 130px;
+  /*border: px solid white;*/
+}
+
 
 #content{
   padding:100px 50px;
@@ -67,4 +100,22 @@ body{ margin:0px 0px; }
   padding:30px 0px;
   text-align:center;
   background:#ddd;
+}
+
+@media only screen and (max-width: 500px) {
+  .header h1 {
+    font-size: 50px;
+    padding-bottom: 10px;
+    padding-top: 5px;
+  }
+
+  .lead {
+    width: 300px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .header h1 {
+    /*font-size: 40px;*/
+  }
 }
